--- a/index.html
+++ b/index.html
@@ -42,12 +42,17 @@
                 </div>
 
             </div>
-            <div class="rightMain col-md-9 transition-swipeup" id="swup">
+            <div class="rightMain col-md-9 transition-swipeup" id="swup" style="
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        ">
                 <div class="homeMain">
                     <p>
                     <h1 align="center">Hi 👋, I&#39;m Bindhu Madhava Varma</h1>
                     </p>
-                    <h4 align="center">A passionate Software Engineer from Bangalore, India. Currently working as a Software Engineer at <a target="_blank" href="https://www.shell.com">Shell.</a></h4>
+                    <h4 align="center">A passionate Software Engineer from Bangalore, India. Currently working as a
+                        Software Engineer at <a target="_blank" href="https://www.shell.com">Shell.</a></h4>
                 </div>
 
             </div>
