--- a/skills.html
+++ b/skills.html
@@ -49,167 +49,167 @@
                     </div>
                     <!--tech stack icons-->
                     <div class="row text-center">
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=androidstudio" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=aws" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=azure" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=bootstrap" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=c" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=cs" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=cpp" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=cloudflare" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=css" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=dart" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=docker" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=dotnet" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=express" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=figma" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=firebase" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=flask" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=flutter" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=gcp" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=git" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=github" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=githubactions" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=html" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=java" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=js" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
-                                src="https://skillicons.dev/icons?i=jaquery" />
+                                src="https://skillicons.dev/icons?i=jquery" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=materialui" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=mysql" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=mongodb" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=nextjs" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=nodejs" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=php" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=postgres" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=postman" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=py" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=r" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=react" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=redux" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=tailwind" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=ts" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=visualstudio" />
                         </div>
-                        <div class="col-lg-2 col-md-3 col-4" style="padding:5px">
+                        <div class="col-lg-2 col-md-3 col-4" style="padding:8px">
                             <img style="width: 100%;"
                                 src="https://skillicons.dev/icons?i=vscode" />
                         </div>
