--- a/internships.html
+++ b/internships.html
@@ -40,7 +40,7 @@
             <div class="rightMain col-md-9 transition-swipeleft" id="swup">
                 <div class="inner">
                     <div>
-                        <h1><span style="color: var(--text1);">Internship</span> Details</h1>
+                        <h1><span style="color: var(--text1);">Career</span> Details</h1>
                     </div>
                     <div class="tableWrapper">
                         <table class="table" style="color: white;text-align: left;">
@@ -55,25 +55,18 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <th scope="row">SEDS VIT-AP</th>
-                                    <td>Vice President</td>
-                                    <td>On going</td>
-                                    <td>On going</td>
+                                    <th scope="row">Andhra Pradesh Technology Services (<a href="https://www.apts.gov.in">apts.gov.in</a>)</th>
+                                    <td>Software Engineer (Intern)</td>
+                                    <td>4 Months</td>
+                                    <td>Mar 2023</td>
                                     <td>-</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">SEDS VIT-AP</th>
-                                    <td>Web Developer</td>
-                                    <td>8 Months</td>
-                                    <td>June 2021</td>
-                                    <td><a target="_blank" href="pdfs/sedsCertificate.pdf" style="color: #f02c54;">click here</a></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">Sparks Foundation</th>
-                                    <td>Web Developer</td>
-                                    <td>1 Month</td>
-                                    <td>Feb 2021</td>
-                                    <td><a target="_blank" href="pdfs/sparks.pdf" style="color: #f02c54;">click here</a></td>
+                                    <th scope="row">Shell (<a href="https://www.shell.com">shell.com</a>)</th>
+                                    <td>Software Engineer</td>
+                                    <td>On going</td>
+                                    <td>On going</td>
+                                    <td>-</td>
                                 </tr>
                             </tbody>
                         </table>
