--- a/internships.html
+++ b/internships.html
@@ -55,14 +55,14 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <th scope="row">Andhra Pradesh Technology Services (<a href="https://www.apts.gov.in">apts.gov.in</a>)</th>
+                                    <th scope="row">Andhra Pradesh Technology Services <a style="color: #f02c54;" href="https://www.apts.gov.in">apts.gov.in</a></th>
                                     <td>Software Engineer (Intern)</td>
                                     <td>4 Months</td>
                                     <td>Mar 2023</td>
                                     <td>-</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Shell (<a href="https://www.shell.com">shell.com</a>)</th>
+                                    <th scope="row">Shell <a style="color: #f02c54;" href="https://www.shell.com">shell.com</a></th>
                                     <td>Software Engineer</td>
                                     <td>On going</td>
                                     <td>On going</td>
